--- a/index.html
+++ b/index.html
@@ -360,14 +360,14 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'c3') {
-			map.setStyle('mapbox://styles/owja/cjz9kx3oe07e71cqr8kpxfdpm')
+			map.setStyle('mapbox://styles/owja/cjzb75j0l03yk1csyvlzl62jq')
 			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
 			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
 			document.getElementById('legend').style.visibility = 'visible';   
 			document.getElementById('legend-title').innerHTML = 'Health Insurance Coverage (%)';
-			document.getElementById('label-vlow').innerHTML = '52 - 85';
-			document.getElementById('label-low').innerHTML = '85 - 88';
-			document.getElementById('label-mod').innerHTML = '88 - 91';
+			document.getElementById('label-vlow').innerHTML = '82 - 88';
+			document.getElementById('label-low').innerHTML = '88 - 90';
+			document.getElementById('label-mod').innerHTML = '90 - 91';
 			document.getElementById('label-high').innerHTML = '91 - 93';
 			document.getElementById('label-vhigh').innerHTML = '93 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
@@ -442,10 +442,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'd3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb7ca7b04r91cq7b0iqkx19')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Poverty Rate (%)';
+			document.getElementById('label-vlow').innerHTML = '8.1 - 11.2';
+			document.getElementById('label-low').innerHTML = '11.2 - 13.0';
+			document.getElementById('label-mod').innerHTML = '13.0 - 14.9';
+			document.getElementById('label-high').innerHTML = '14.9 - 16.7';
+			document.getElementById('label-vhigh').innerHTML = ' 16.7 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'd4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -513,10 +524,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'e3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb7hs5s00441cpjq6o6dxhx')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Median Income ($)';
+			document.getElementById('label-vlow').innerHTML = '42,009 - 50,209';
+			document.getElementById('label-low').innerHTML = '50,209 - 53,316';
+			document.getElementById('label-mod').innerHTML = '53,316 - 57,354';
+			document.getElementById('label-high').innerHTML = '57,354 - 65,794';
+			document.getElementById('label-vhigh').innerHTML = '65,794 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#2c7fb8;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#253494;"></span>';
 		} else if (styleId === 'e4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -584,10 +606,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'f3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb7ouvh0bxn1cmwplk6cqw3')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Non Hispanic Black (%)';
+			document.getElementById('label-vlow').innerHTML = '0.0 - 2.2';
+			document.getElementById('label-low').innerHTML = '2.2 - 5.6';
+			document.getElementById('label-mod').innerHTML = '5.6 - 11.0';
+			document.getElementById('label-high').innerHTML = '11.0 - 17.1';
+			document.getElementById('label-vhigh').innerHTML = '17.1 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'f4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -655,10 +688,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'g3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb7wuo00c4q1cmwfmhcl3oo')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Non Hispanic White (%)';
+			document.getElementById('label-vlow').innerHTML = '36.0 - 56.0';
+			document.getElementById('label-low').innerHTML = '56.0 - 66.2';
+			document.getElementById('label-mod').innerHTML = '66.2 - 76.5';
+			document.getElementById('label-high').innerHTML = '76.5 - 82.6';
+			document.getElementById('label-vhigh').innerHTML = ' 82.6 - +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'g4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -726,10 +770,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'h3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb81n1f03e41crwpsru781y')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Hispanic (%)';
+			document.getElementById('label-vlow').innerHTML = '1.5 - 3.9';
+			document.getElementById('label-low').innerHTML = '3.9 - 6.7';
+			document.getElementById('label-mod').innerHTML = '6.7 - 10.3';
+			document.getElementById('label-high').innerHTML = '10.3 - 15.6';
+			document.getElementById('label-vhigh').innerHTML = ' 15.6 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'h4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -797,10 +852,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'i3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb86l5x0fi11cru63sxt9ml')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Median Home Value ($)';
+			document.getElementById('label-vlow').innerHTML = '109,300 - 138,800';
+			document.getElementById('label-low').innerHTML = '138,800 - 162,740';
+			document.getElementById('label-mod').innerHTML = '162,740 - 201,780';
+			document.getElementById('label-high').innerHTML = '201,780 - 262,660';
+			document.getElementById('label-vhigh').innerHTML = '262,660 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#2c7fb8;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#253494;"></span>';
 		} else if (styleId === 'i4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
