--- a/index.html
+++ b/index.html
@@ -934,10 +934,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'j3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb97xqe00m91dph1bm1fc2v')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Median Rent ($)';
+			document.getElementById('label-vlow').innerHTML = '681 - 772';
+			document.getElementById('label-low').innerHTML = '772 - 820';
+			document.getElementById('label-mod').innerHTML = '820 - 950';
+			document.getElementById('label-high').innerHTML = '950 - 1121';
+			document.getElementById('label-vhigh').innerHTML = '1121 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#2c7fb8;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#253494;"></span>'; 
 		} else if (styleId === 'j4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1005,10 +1016,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'k3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb9hu1q07tf1cmwngoxei1m')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Housing and Urban Development Department<br><strong>Year:</strong> 2018<br><a href="https://www.huduser.gov/portal/datasets/assthsg.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Subsidized Housing Units';
+			document.getElementById('label-vlow').innerHTML = '5,764 - 23,014';
+			document.getElementById('label-low').innerHTML = '23,014 - 46,713';
+			document.getElementById('label-mod').innerHTML = '46,713 - 89,989';
+			document.getElementById('label-high').innerHTML = '89,989 - 137,921';
+			document.getElementById('label-vhigh').innerHTML = '137,921 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'k4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1076,10 +1098,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'l3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb9xnnd059f1cl3jdgdqoc2')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Eviction Lab<br><strong>Year:</strong> 2016<br><a href="https://data-downloads.evictionlab.org/" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Eviction Rate (%)';
+			document.getElementById('label-vlow').innerHTML = '0.0 - 1.1';
+			document.getElementById('label-low').innerHTML = '1.1 - 2.2';
+			document.getElementById('label-mod').innerHTML = '2.2 - 2.9';
+			document.getElementById('label-high').innerHTML = '2.9 - 3.6';
+			document.getElementById('label-vhigh').innerHTML = '3.6 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'l4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1147,10 +1180,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'm3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzba326409wf1co0b85ewnmv')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Eviction Lab<br><strong>Year:</strong> 2016<br><a href="https://data-downloads.evictionlab.org/" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Eviction Filing Rate (%)';
+			document.getElementById('label-vlow').innerHTML = '0.0 - 0.2';
+			document.getElementById('label-low').innerHTML = '0.2 - 1.0';
+			document.getElementById('label-mod').innerHTML = '1.0 - 2.2';
+			document.getElementById('label-high').innerHTML = '2.2 - 4.6';
+			document.getElementById('label-vhigh').innerHTML = ' 4.6 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'm4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1218,10 +1262,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'n3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb9rq56002f1ctduf4kzly0')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Federal Bureau of Investigation<br><strong>Year:</strong> 2014<br><a href="https://ucr.fbi.gov/crime-in-the-u.s/2014/crime-in-the-u.s.-2014/offenses-known-to-law-enforcement/violent-crime/violent-crime" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Violent Crime (Incidents per 100,000 People)';
+			document.getElementById('label-vlow').innerHTML = '99 - 231';
+			document.getElementById('label-low').innerHTML = '231 - 297';
+			document.getElementById('label-mod').innerHTML = '297 - 379';
+			document.getElementById('label-high').innerHTML = '379 - 453';
+			document.getElementById('label-vhigh').innerHTML = ' 453 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'n4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1349,10 +1404,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'p3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzba7k1p0a0c1co0qt0q0k4i')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey (percentage based on population 15 years and over)<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Currently Married (%)';
+			document.getElementById('label-vlow').innerHTML = '30.7 - 49.0';
+			document.getElementById('label-low').innerHTML = '49.0 - 50.3';
+			document.getElementById('label-mod').innerHTML = '50.3 - 51.8';
+			document.getElementById('label-high').innerHTML = '51.8 - 53.2';
+			document.getElementById('label-vhigh').innerHTML = ' 53.2 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'p4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1420,10 +1486,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'q3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzbacfl308ie1cmmndojzd6f')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey (In labor force: Civilian labor force: Unemployed: Population 16 years and over)<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Unemployed (%)';
+			document.getElementById('label-vlow').innerHTML = '2.7 - 4.8';
+			document.getElementById('label-low').innerHTML = '4.8 - 6.0';
+			document.getElementById('label-mod').innerHTML = '6.0 - 6.8';
+			document.getElementById('label-high').innerHTML = '6.8 - 7.3';
+			document.getElementById('label-vhigh').innerHTML = '7.3 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'q4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1491,10 +1568,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'r3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden"; 
+			map.setStyle('mapbox://styles/owja/cjzbapggf123m1co0plj3fjhy')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Fraction of land suitable for development<br><strong>Year:</strong> 2019</p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Developable Land (%)';
+			document.getElementById('label-vlow').innerHTML = '26.3 - 55.5';
+			document.getElementById('label-low').innerHTML = '55.5 - 62.3';
+			document.getElementById('label-mod').innerHTML = '62.3 - 69.8';
+			document.getElementById('label-high').innerHTML = '69.8 - 83.3';
+			document.getElementById('label-vhigh').innerHTML = '83.3 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#abdda4;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#2b83ba;"></span>';
 		} else if (styleId === 'r4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1562,10 +1650,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 's3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzbapk9d098y1cqvhmibcyvl')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> GIS data from US Census Bureau, (total miles of primary and secondary roads)<br><strong>Year:</strong> 2019</p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Total Road Length (miles)';
+			document.getElementById('label-vlow').innerHTML = '161 - 10,517';
+			document.getElementById('label-low').innerHTML = '10,517 - 14,872';
+			document.getElementById('label-mod').innerHTML = '14,872 - 21,486';
+			document.getElementById('label-high').innerHTML = '21,486 - 32084';
+			document.getElementById('label-vhigh').innerHTML = '32,084 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#2c7fb8;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#253494;"></span>';
 		} else if (styleId === 's4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
