--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="form-group">
 					<select class="form-control" id="level-select">
 						<option value="" disabled selected>Choose a Level</option>
-						<!--<option value="1">Regions</option>-->
-						<option value="2">Census Divisions</option>
+						<!--<option value="1">Regions</option>
+						<option value="2">Census Divisions</option>-->
 						<option value="3">States</option>
 						<!-- <option value="4">CBSAs</option>
 						<option value="5">Commuting Zones</option> -->
